<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- Netflix Logo -->

    <!-- Email Input -->

    <!-- Password Input -->

    <!-- Show/Hide Password Icon -->

    <ImageView
        android:id="@+id/netflixLogo"
        android:layout_width="182dp"
        android:layout_height="63dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="172dp"
        android:contentDescription="@string/netflix_logo"
        android:src="@drawable/nt"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#888888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <TextView
        android:id="@+id/needHelpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginBottom="280dp"
        android:text="@string/need_help"
        android:textColor="#888888"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="306dp"
        android:background="@drawable/button_bg"
        android:text="Sign in"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="0.472" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="264dp"
        android:background="@drawable/input_bg"
        android:hint="@string/email_or_phone_number"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#888888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/showPasswordIcon"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/show_password"
        android:paddingEnd="10dp"
        android:src="@drawable/eye_password_hide_svgrepo_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="40dp"
        android:text="@string/new_to_netflix_sign_up_now"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Sign In Button -->

    <!-- Need Help? -->

    <!-- Sign Up Link -->

</androidx.constraintlayout.widget.ConstraintLayout>
